fix no wrap

--- a/front_end/component/headBar.module.css
+++ b/front_end/component/headBar.module.css
@@ -11,7 +11,7 @@
     max-width: 90vh;
     min-width: 90vh;
     cursor: pointer;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     font-weight: 400;
     z-index: 2;
 }
